fix spacing of hero section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -743,3 +743,7 @@ html.lenis {
     text-align: center;
     margin-top: 8px;
 }
+
+.placeholder {
+    height: 60vh;
+}
